<resources>
    <string name="app_name">ALC 4 Phase 1</string>
    <string name="welcome">Welcome To ALC 4.0</string>
    <string name="about_alc">ABOUT ALC</string>
    <string name="my_profile">My Profile</string>
    <string name="name">Frebanga Udoh</string>
    <string name="track">Track:</string>
    <string name="android">Android</string>
    <string name="country">Country:</string>
    <string name="nigeria">Nigeria</string>
    <string name="email">Email:</string>
    <string name="emailAdd">fredudoh33@gmail.com</string>
    <string name="phone">Phone Number:</string>
    <string name="number">+2348102545821</string>
    <string name="slack">Slack Username:</string>
    <string name="slack_name">\@Frebby Udoh</string>
</resources>
