<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    >

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".ProfileActivity">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/prof_pic"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/name"
            android:textColor="@color/colorBlack"
            android:textSize="24sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorBlack" />

        <LinearLayout
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/ic_desktop_windows_black_24dp"
                android:drawableLeft="@drawable/ic_desktop_windows_black_24dp"

                android:text="@string/track"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/android"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:drawablePadding="2dp"
                android:drawableLeft="@drawable/ic_place_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/country"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"
                android:drawableStart="@drawable/ic_place_black_24dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/nigeria"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/ic_email_black_24dp"
                android:drawableLeft="@drawable/ic_email_black_24dp"

                android:text="@string/email"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/emailAdd"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/ic_local_phone_black_24dp"
                android:drawableLeft="@drawable/ic_local_phone_black_24dp"

                android:text="@string/phone"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/number"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:drawablePadding="2dp"
                android:drawableStart="@drawable/ic_perm_identity_black_24dp"
            android:drawableLeft="@drawable/ic_perm_identity_black_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/slack"
                android:textColor="@color/colorBlack"
                android:textSize="18sp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:text="@string/slack_name"
                android:textColor="@color/colorBlack"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>
</ScrollView>